// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-data-table allows pinning columns 1`] = `
<c-data-table class="hydrated">
  <mock:shadow-root>
    <table class="c-data-table c-data-table--hoverable">
      <colgroup>
        <col>
        <col>
        <col>
      </colgroup>
      <thead>
        <tr>
          <th class="indicator"></th>
          <th data-id="country">
            <div class="sortable">
              Country
              <svg height="24" tabindex="0" viewBox="0 0 24 24" width="24">
                <path d="M9,3L5,7H8V14H10V7H13M16,17V10H14V17H11L15,21L19,17H16Z"></path>
              </svg>
            </div>
          </th>
          <th data-id="unemployment">
            <div class="sortable">
              Unemployment (%)
              <svg height="24" tabindex="0" viewBox="0 0 24 24" width="24">
                <path d="M9,3L5,7H8V14H10V7H13M16,17V10H14V17H11L15,21L19,17H16Z"></path>
              </svg>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class="loader" colspan="100"></td>
        </tr>
        <tr class="parent">
          <td>
            <div tabindex="0">
              <svg height="22" viewBox="0 0 24 24" width="22">
                <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
              </svg>
            </div>
          </td>
          <td>
            <div data-align="center">
              <div class="children">
                <p style="margin: 0px;">
                  Denmark
                </p>
                <c-icon class="hydrated" style="height: 24px;"></c-icon>
              </div>
            </div>
          </td>
          <td>
            <div>
              4.8
            </div>
          </td>
        </tr>
        <tr class="additional-data">
          <td colspan="100">
            <div>
              <ul>
                <li>
                  <div class="title">
                    <span>
                      Population (2020):
                    </span>
                    5831404
                  </div>
                </li>
                <li>
                  <div class="children">
                    <c-button class="hydrated" title="Show Code">
                      Show Code
                    </c-button>
                  </div>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr class="parent">
          <td>
            <div tabindex="0">
              <svg height="22" viewBox="0 0 24 24" width="22">
                <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
              </svg>
            </div>
          </td>
          <td>
            <div data-align="center">
              Finland
            </div>
          </td>
          <td>
            <div>
              7.5
            </div>
          </td>
        </tr>
        <tr class="additional-data">
          <td colspan="100">
            <div>
              <ul>
                <li>
                  <div class="title">
                    <span>
                      Population (2020):
                    </span>
                    5529543
                  </div>
                </li>
                <li>
                  <div class="children">
                    <c-button class="hydrated" title="Show Code">
                      Show Code
                    </c-button>
                  </div>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr class="parent">
          <td>
            <div tabindex="0">
              <svg height="22" viewBox="0 0 24 24" width="22">
                <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
              </svg>
            </div>
          </td>
          <td>
            <div data-align="center">
              Iceland
            </div>
          </td>
          <td>
            <div>
              5.4
            </div>
          </td>
        </tr>
        <tr class="additional-data">
          <td colspan="100">
            <div>
              <ul>
                <li>
                  <div class="title">
                    <span>
                      Population (2020):
                    </span>
                    366463
                  </div>
                </li>
                <li>
                  <div class="children">
                    <c-button class="hydrated" title="Show Code">
                      Show Code
                    </c-button>
                  </div>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr class="parent">
          <td>
            <div tabindex="0">
              <svg height="22" viewBox="0 0 24 24" width="22">
                <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
              </svg>
            </div>
          </td>
          <td>
            <div data-align="center">
              Norway
            </div>
          </td>
          <td>
            <div>
              5
            </div>
          </td>
        </tr>
        <tr class="additional-data">
          <td colspan="100">
            <div>
              <ul>
                <li>
                  <div class="title">
                    <span>
                      Population (2020):
                    </span>
                    5379475
                  </div>
                </li>
                <li>
                  <div class="children">
                    <c-button class="hydrated" title="Show Code">
                      Show Code
                    </c-button>
                  </div>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr class="parent">
          <td>
            <div tabindex="0">
              <svg height="22" viewBox="0 0 24 24" width="22">
                <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
              </svg>
            </div>
          </td>
          <td>
            <div data-align="center">
              Sweden
            </div>
          </td>
          <td>
            <div>
              8.7
            </div>
          </td>
        </tr>
        <tr class="additional-data">
          <td colspan="100">
            <div>
              <ul>
                <li>
                  <div class="title">
                    <span>
                      Population (2020):
                    </span>
                    10353442
                  </div>
                </li>
                <li>
                  <div class="children">
                    <c-button class="hydrated" title="Show Code">
                      Show Code
                    </c-button>
                  </div>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr class="parent">
          <td>
            <div tabindex="0">
              <svg height="22" viewBox="0 0 24 24" width="22">
                <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
              </svg>
            </div>
          </td>
          <td>
            <div data-align="center">
              Kermany
            </div>
          </td>
          <td>
            <div>
              100.1
            </div>
          </td>
        </tr>
        <tr class="additional-data">
          <td colspan="100">
            <div>
              <ul>
                <li>
                  <div class="title">
                    <span>
                      Population (2020):
                    </span>
                    18353442
                  </div>
                </li>
                <li>
                  <div class="children">
                    <c-button class="hydrated" title="Show Code">
                      Show Code
                    </c-button>
                  </div>
                </li>
              </ul>
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr>
          <td colspan="100">
            <div class="c-data-table__footer">
              <c-pagination class="hydrated"></c-pagination>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </mock:shadow-root>
</c-data-table>
`;

exports[`c-data-table displays hidden data on row click 1`] = `
<tr class="active additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            4.8
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>
`;

exports[`c-data-table displays single row at a time 1`] = `
Array [
  <tr class="additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            4.8
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>,
  <tr class="active additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            7.5
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>,
  <tr class="additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            5.4
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>,
  <tr class="additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            5
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>,
  <tr class="additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            8.7
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>,
  <tr class="additional-data">
  <td colspan="100">
    <div>
      <ul>
        <li>
          <div class="title">
            <span>
              Unemployment (%):
            </span>
            100.1
          </div>
        </li>
      </ul>
    </div>
  </td>
</tr>,
]
`;
